<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main_1"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:background="@drawable/fffff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/edit_city"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="10dp"

                android:src="@drawable/ic_baseline_edit_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_bishkek"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="150dp"
                android:text="@string/Bishkek"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_kyrgyzstan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/KKKKKKyrgyzstan"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_bishkek" />

            <TextView
                android:id="@+id/am_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="90dp"
                android:text="@string/_10_00_ammmmmmm"
                android:textColor="@color/white"
                android:textSize="40sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_kyrgyzstan" />

            <TextView
                android:id="@+id/date_1010"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/_10_10_20211212"
                android:textColor="#666666"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/am_10" />

            <TextView
                android:id="@+id/temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/_2_cccccccc"
                android:textColor="@color/white"
                android:textSize="40sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/am_10" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/CCSCscsdcsc"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/date_1010" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main_2"
            android:layout_width="match_parent"
            android:layout_height="330dp"
            app:layout_constraintTop_toBottomOf="@id/main_1">

            <ImageButton
                android:id="@+id/ib_camera"
                android:layout_width="130dp"
                android:layout_height="120dp"
                android:background="@color/white"
                android:src="@drawable/ic_baseline_camera_alt_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/phone"
                android:layout_width="130dp"
                android:layout_height="120dp"
                android:background="@color/white"
                android:src="@drawable/ic_baseline_people_24"
                app:layout_constraintStart_toEndOf="@id/ib_camera"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/internet"
                android:layout_width="140dp"
                android:layout_height="120dp"
                android:background="@color/white"
                android:src="@drawable/ic_baseline_language_24"
                app:layout_constraintStart_toEndOf="@id/phone"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/get_toast"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="50dp"
                android:backgroundTint="@color/orange"
                android:text="@string/dkjvndfvndfjvn"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/phone" />

        </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>


